// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RippleButton /> should render as a disabled ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={true}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={true}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={true}
      flat={false}
      onClick={null}
      testId="Button"
      type="primary"
      wrapContent={true}
    >
      <Button
        className="ui-shared__button css-10t88aj  ui-shared__ripple-button"
        disabled={true}
        onClick={null}
        testId="Button"
        type="button"
      >
        <button
          className="ui-shared__button css-10t88aj  ui-shared__ripple-button tss-16c9pag-root common__button"
          data-test-id="Button"
          disabled={true}
          onClick={null}
          type="button"
        >
          <div
            className="css-kwqjom"
          >
            Press me
          </div>
        </button>
      </Button>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a primary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={false}
      flat={false}
      onClick={null}
      testId="Button"
      type="primary"
      wrapContent={false}
    >
      <Button
        className="ui-shared__button css-cifbew  ui-shared__ripple-button"
        disabled={false}
        onClick={null}
        testId="Button"
        type="button"
      >
        <button
          className="ui-shared__button css-cifbew  ui-shared__ripple-button tss-16c9pag-root common__button"
          data-test-id="Button"
          disabled={false}
          onClick={null}
          type="button"
        >
          <RippleWithStyles
            className="tss-p1t6ie-RippleButton-contentWrapper "
            fill={true}
            overflow={true}
            size={null}
          >
            <Ripple
              className="tss-p1t6ie-RippleButton-contentWrapper "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={true}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={true}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                Press me
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </Button>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a regular ripple button effect if type is omitted 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="primary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="primary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={false}
      flat={false}
      onClick={null}
      testId="Button"
      type="primary"
      wrapContent={false}
    >
      <Button
        className="ui-shared__button css-cifbew  ui-shared__ripple-button"
        disabled={false}
        onClick={null}
        testId="Button"
        type="button"
      >
        <button
          className="ui-shared__button css-cifbew  ui-shared__ripple-button tss-16c9pag-root common__button"
          data-test-id="Button"
          disabled={false}
          onClick={null}
          type="button"
        >
          <RippleWithStyles
            className="tss-p1t6ie-RippleButton-contentWrapper "
            fill={true}
            overflow={true}
            size={null}
          >
            <Ripple
              className="tss-p1t6ie-RippleButton-contentWrapper "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={true}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={true}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                Press me
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </Button>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a regular ripple button if type is explicitly defined 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="regular"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="regular"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={false}
      flat={false}
      onClick={null}
      testId="Button"
      type="regular"
      wrapContent={false}
    >
      <Button
        className="ui-shared__button css-1a50m4j  ui-shared__ripple-button"
        disabled={false}
        onClick={null}
        testId="Button"
        type="button"
      >
        <button
          className="ui-shared__button css-1a50m4j  ui-shared__ripple-button tss-16c9pag-root common__button"
          data-test-id="Button"
          disabled={false}
          onClick={null}
          type="button"
        >
          <RippleWithStyles
            className="tss-p1t6ie-RippleButton-contentWrapper "
            fill={true}
            overflow={true}
            size={null}
          >
            <Ripple
              className="tss-p1t6ie-RippleButton-contentWrapper "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={true}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={true}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                Press me
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </Button>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;

exports[`<RippleButton /> should render as a secondary ripple button 1`] = `
<RippleButtonWithStyles
  className=""
  disabled={false}
  flat={false}
  onClick={null}
  rippleClassName=""
  rippleSize={null}
  testId="Button"
  type="secondary"
  wrapContent={true}
>
  <RippleButton
    className=""
    classes={
      {
        "contentWrapper": "tss-p1t6ie-RippleButton-contentWrapper",
      }
    }
    disabled={false}
    flat={false}
    onClick={null}
    rippleClassName=""
    rippleSize={null}
    testId="Button"
    type="secondary"
    wrapContent={true}
  >
    <Button
      className=" ui-shared__ripple-button"
      disabled={false}
      flat={false}
      onClick={null}
      testId="Button"
      type="secondary"
      wrapContent={false}
    >
      <Button
        className="ui-shared__button css-mk0dpu  ui-shared__ripple-button"
        disabled={false}
        onClick={null}
        testId="Button"
        type="button"
      >
        <button
          className="ui-shared__button css-mk0dpu  ui-shared__ripple-button tss-16c9pag-root common__button"
          data-test-id="Button"
          disabled={false}
          onClick={null}
          type="button"
        >
          <RippleWithStyles
            className="tss-p1t6ie-RippleButton-contentWrapper "
            fill={true}
            overflow={true}
            size={null}
          >
            <Ripple
              className="tss-p1t6ie-RippleButton-contentWrapper "
              classes={
                {
                  "container": "tss-1dfkr3n-Ripple-container",
                }
              }
              color="#000"
              disabled={false}
              fill={true}
              onClick={[Function]}
              onComplete={[Function]}
              overflow={true}
              size={null}
            >
              <div
                className="ui-shared__ripple tss-p1t6ie-RippleButton-contentWrapper "
                data-test-id="Ripple"
                onClick={[Function]}
                style={null}
              >
                Press me
              </div>
            </Ripple>
          </RippleWithStyles>
        </button>
      </Button>
    </Button>
  </RippleButton>
</RippleButtonWithStyles>
`;
